--- a/custom_components/cozytouch/manifest.json
+++ b/custom_components/cozytouch/manifest.json
@@ -5,5 +5,6 @@
     "config_flow": true,
     "documentation": "https://github.com/gduteil/cozytouch",
     "iot_class": "cloud_polling",
-    "version": "0.1.0"
+    "version": "0.6.0",
+    "issue_tracker": "https://github.com/gduteil/cozytouch/issues",
   }
