--- a/custom_components/cozytouch/manifest.json
+++ b/custom_components/cozytouch/manifest.json
@@ -6,5 +6,5 @@
     "documentation": "https://github.com/gduteil/cozytouch",
     "iot_class": "cloud_polling",
     "version": "0.6.0",
-    "issue_tracker": "https://github.com/gduteil/cozytouch/issues",
+    "issue_tracker": "https://github.com/gduteil/cozytouch/issues"
   }
