--- a/.github/workflows/hacs.yaml
+++ b/.github/workflows/hacs.yaml
@@ -2,7 +2,11 @@ name: HACS validation
 
 on:
   push:
+    branches:
+      - "main"
   pull_request:
+    branches:
+      - "main"
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
