--- a/custom_components/cozytouch/manifest.json
+++ b/custom_components/cozytouch/manifest.json
@@ -5,6 +5,6 @@
     "config_flow": true,
     "documentation": "https://github.com/gduteil/cozytouch",
     "iot_class": "cloud_polling",
-    "version": "0.9.0",
-    "issue_tracker": "https://github.com/gduteil/cozytouch/issues"
-  }
+    "issue_tracker": "https://github.com/gduteil/cozytouch/issues",
+    "version": "0.9.0"
+}
